Nested loop strategy (#1226)
Co-authored-by: Mael Besson <besson.mael@gmail.com>