@@ -68,8 +68,11 @@ public class ForEachStrategy implements StepExecutionStrategy {
                 .peek(p -> step.addStepExecution(p.getLeft()))
                 .toList();
 
-            iterations.forEach(it ->
-                DefaultStepExecutionStrategy.instance.execute(scenarioExecution, it.getLeft()/*step*/, scenarioContext, it.getRight()/*localContext*/, strategies));
+            iterations.forEach(it -> {
+                Map<String, Object> mergedContext = new HashMap<>(localContext);
+                mergedContext.putAll(it.getRight());
+                DefaultStepExecutionStrategy.instance.execute(scenarioExecution, it.getLeft(), scenarioContext, mergedContext, strategies);
+            });
 
         } else {
             List<Pair<Step, Map<String, Object>>> iterations = dataset.stream()
@@ -77,7 +80,11 @@ public class ForEachStrategy implements StepExecutionStrategy {
                 .peek(e -> step.addStepExecution(e.getKey()))
                 .toList();
 
-            iterations.forEach(it -> it.getLeft().execute(scenarioExecution, scenarioContext, it.getRight()));
+            iterations.forEach(it -> {
+                Map<String, Object> mergedContext = new HashMap<>(localContext);
+                mergedContext.putAll(it.getRight());
+                it.getLeft().execute(scenarioExecution, scenarioContext, mergedContext);
+            });
         }
         step.endExecution(scenarioExecution);
         return step.status();
@@ -88,12 +95,12 @@ public class ForEachStrategy implements StepExecutionStrategy {
         if (dataset.isEmpty()) {
             throw new IllegalArgumentException("Step iteration cannot have empty dataset");
         }
-        List<Map<String, Object>> evaluatedDataset = dataset.stream()
+
+        return dataset.stream()
             .map(iterationData -> iterationData.entrySet().stream()
                 .map(e -> Map.entry(e.getKey(), evaluator.evaluate(e.getValue(), scenarioContext)))
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)))
             .toList();
-        return evaluatedDataset;
     }
 
     private Pair<Step, Map<String, Object>> buildParentIteration(String indexName, Integer index, Step step, List<Step> subSteps, Map<String, Object> iterationContext) {
@@ -101,7 +108,7 @@ public class ForEachStrategy implements StepExecutionStrategy {
         StepDefinition newDef = iterationDefinition(indexName, index, step.definition(), new StepStrategyDefinition("", new StrategyProperties()));
         List<Step> newSubSteps = subSteps.stream().map(
             subStep -> buildIterationDefinition(indexName, index, subStep.dataEvaluator(), subStep.definition(), subStep.executor(), subStep.subSteps(), subStep.strategy().orElse(new StepStrategyDefinition("", new StrategyProperties())))
-        ).collect(Collectors.toList());
+        ).toList();
 
         return Pair.of(
             new Step(step.dataEvaluator(), newDef, step.executor(), newSubSteps),
@@ -118,7 +125,7 @@ public class ForEachStrategy implements StepExecutionStrategy {
 
     private Step buildIterationDefinition(String indexName, Integer index, StepDataEvaluator dataEvaluator, StepDefinition definition, StepExecutor executor, List<Step> subStep, StepStrategyDefinition strategy) {
         StepDefinition iterationDefinition = iterationDefinition(indexName, index, definition, Optional.ofNullable(strategy).orElse(new StepStrategyDefinition("", new StrategyProperties())));
-        return new Step(dataEvaluator, iterationDefinition, executor, subStep.stream().map(step -> buildIterationDefinition(indexName, index, step.dataEvaluator(), step.definition(), step.executor(), step.subSteps(), step.strategy().orElse(null))).toList());
+        return new Step(dataEvaluator, iterationDefinition, executor, subStep.stream().map(step -> buildIterationDefinition(indexName, index, step.dataEvaluator(), step.definition(), step.executor(), step.subSteps(), step.strategy().orElse(null))).collect(Collectors.toList())); // We need this list to be mutable because of the clear in step.removeStepExecution()
     }
 
     private StepDefinition iterationDefinition(String indexName, Integer index, StepDefinition definition, StepStrategyDefinition strategyDefinition) {
